--- a/tychr-frontend/src/app/globals.css
+++ b/tychr-frontend/src/app/globals.css
@@ -11,6 +11,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
